update new structure

--- a/_posts/2024-07-26-cdktf.markdown
+++ b/_posts/2024-07-26-cdktf.markdown
@@ -7,52 +7,45 @@ headerImage: false
 hidden: false
 projects: true
 tag:
-- karpenter
-- kubernetes
-- EKS
+- CDK
+- AWS
+- Terraform
+- Python
 category: project
 author: anuraggautam
-description: Infratructure Automation with Terraform and CDKTF
+description: Infrastructure Automation with Terraform and CDKTF
 ---
 
 ## Summary:
 
-During the development phase for one of our clients, we encountered issues with pods being evicted on nodes managed by Karpenter. This blog delves into the details of the problem, the various components involved, and the steps we took to resolve it.
+for few customers, we have been using Terraform Cloud using HCL language and also CDKTF in python to provide fully automated Infrastructure as Code Solution.
 
 #### Topics
-- [Issue Description](#issuedescription)
-- [What is Karpenter?](#whatiskarpenter)
-- [Solution](#solution)
+- [Case Study](#casestudy)
+- [Why we use CDKTF in python?](#whyweusecdktfinpython)
 
 
-## Issue Description
+## Case Study
 
-You can try the evidence!
+<span class="casestudy">We needed a infrastructure as Code Solution which we can leverage to fullfil our promise of delivering an infrastructure which is truly and fully automated.</span>
 
-<span class="issuedescription">Paragraphs can be written like so. A paragraph is the basic block of Markdown. A paragraph is what text will turn into when there is no reason it should become anything else.</span>
+## Why we use CDKTF in python?
 
+<span class="whyweusecdktfinpython">
 
-## What is Karpenter?
+Using CDKTF (Cloud Development Kit for Terraform) in Python offers several benefits:
 
-<span class="whatiskarpenter">Karpenter is an open-source, high-performance Kubernetes cluster autoscaler developed by AWS. Designed to simplify the process of managing compute resources within a Kubernetes environment, Karpenter dynamically provisions and manages nodes based on the real-time needs of your cluster.
+Familiarity and Flexibility: Leverage Python’s programming constructs and your existing Python skills to write infrastructure as code.
 
-Unlike traditional autoscalers that work with predefined node groups, Karpenter evaluates the resource requirements of pending pods and intelligently launches the most suitable instances. This approach ensures that your applications have the right amount of compute capacity at the right time, reducing the risk of over-provisioning and under-utilization.
+Modularity and Reusability: Create reusable classes and methods for infrastructure components, adhering to the DRY principle.
 
-Key features of Karpenter include:
+Integration: Seamlessly integrate with Python's rich ecosystem of libraries and tools, enhancing automation and workflows.
 
-Dynamic Scaling: Karpenter responds to changes in pod demand by launching or terminating nodes quickly, ensuring optimal resource utilization.
-Custom Resource Definitions (CRDs): Karpenter uses Kubernetes CRDs to manage its configuration and state, allowing for seamless integration with your existing Kubernetes workflows.
-Cost Efficiency: By dynamically adjusting node sizes and types, Karpenter helps minimize costs associated with over-provisioning while meeting application performance requirements.
-Flexibility: Karpenter supports a wide range of instance types and sizes, making it adaptable to various workloads and performance needs.
-Simplicity: With Karpenter, there's no need to manually manage node groups or worry about scaling policies. It automatically makes decisions based on real-time data, simplifying cluster management.
-In essence, Karpenter helps you achieve a balance between resource efficiency and application performance, making it a valuable tool for anyone running Kubernetes at scale.</span>
+Enhanced Abstractions: Utilize object-oriented programming for complex logic and conditional statements that are harder to express in HCL.
 
+Improved Maintainability: Organize infrastructure code into modules and packages, making it easier to manage large projects.
 
-## Solution
-
-You can try the evidence!
-
-<span class="solution">Paragraphs can be written like so. A paragraph is the basic block of Markdown. A paragraph is what text will turn into when there is no reason it should become anything else.</span>
+By combining Python’s capabilities with Terraform's infrastructure management, CDKTF in Python provides a powerful and flexible approach to defining and managing cloud infrastructure. </span>
 
 
 
